sistemas de notificacoes estaveis

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Biblioteca Ciências Moleculares</title>
     <meta name="description" content="Sistema de Biblioteca para o curso de Ciências Moleculares" />
+    
+    <!-- Favicon -->
+    <link rel="icon" href="public/favicon.ico0" sizes="any" />
   </head>
 
   <body>
