--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Biblioteca Ciências Moleculares</title>
-    <meta name="description" content="Sistema de Biblioteca para o curso de Ciências Moleculares" />
+    <title>Biblioteca Moleculares</title>
+    <meta name="description" content="Biblioteca Moleculares, Ciências Moleculares, USP, CCM, livros, estante virtual, buscar, perfil, ajude, entrar, redefinir senha. Sistema moderno para consulta e empréstimo de livros." />
+    <meta name="keywords" content="biblioteca moleculares, ciências moleculares, USP, CCM, livros, estante virtual, buscar, perfil, ajude, entrar, redefinir senha, biblioteca, ciência, biblioteca do cm, biblioteca ccm" />
     
     <!-- PWA Meta Tags -->
     <meta name="theme-color" content="#1e293b" />
