--- a/frontend/index.html
+++ b/frontend/index.html
@@ -19,8 +19,8 @@
     
     <!-- Favicon -->
     <link rel="icon" href="/favicon.ico" sizes="any" />
-    <link rel="icon" href="/images/icon-192x192.png" type="image/png" sizes="192x192" />
-    <link rel="apple-touch-icon" href="/images/icon-192x192.png" />
+    <link rel="icon" href="/images/LogoBrancoBiblioteca.png" type="image/png" sizes="192x192" />
+    <link rel="apple-touch-icon" href="/images/LogoBrancoBiblioteca.png" />
     
     <!-- Manifest PWA -->
     <link rel="manifest" href="/manifest.json" />
